--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,27 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/your_database_name
+    url: jdbc:postgresql://localhost:5432/talk2notes
     username: postgres
-    password: your_password
+    password: password
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
+    show-sql: true
+    open-in-view: false
     properties:
       hibernate:
+        format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
   flyway:
-    enabled: false
+    enabled: true
+    locations: classpath:db/migration
+    validate-on-migrate: true
     baseline-on-migrate: true
+  data:
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
 
 # Logging configuration
 logging:
@@ -21,5 +29,3 @@ logging:
     org:
       springframework: INFO
       hibernate: INFO
-      postgresql: DEBUG
-      flywaydb: DEBUG
