--- a/pom.xml
+++ b/pom.xml
@@ -273,22 +273,27 @@
             </plugin>
 
             <!-- Maven Compiler Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.11.0</version>
+            <configuration>
+              <source>\${java.version}</source>
+              <target>\${java.version}</target>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>org.projectlombok</groupId>
+                  <artifactId>lombok</artifactId>
+                  <version>\${lombok.version}</version>
+                </path>
+                <!-- If you're using mapstruct or other annotation processors, add them here -->
+              </annotationProcessorPaths>
+              <compilerArgs>
+                <arg>-parameters</arg>
+              </compilerArgs>
+              <forceJavacCompilerUse>true</forceJavacCompilerUse>
+            </configuration>
+          </plugin>
 
             <!-- Checkstyle Plugin -->
             <plugin>
